MiniJavaCompiler/Output/parser.output
Grammar

    0 $accept: input $end

    1 input: mainClass classDeclList

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC VOID MAIN LPBRACKET STRING LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET

    3 classDeclList: %empty
    4              | classDeclaration classDeclList

    5 classDeclaration: CLASS ID LFBRACKET varDeclList methodDeclList RFBRACKET
    6                 | CLASS ID EXTENDS ID LFBRACKET varDeclList methodDeclList RFBRACKET

    7 methodDeclList: %empty
    8               | methodDeclaration methodDeclList

    9 varDeclList: %empty
   10            | varDeclList typeName ID SEMICOLON

   11 paramList: %empty
   12          | nonEmptyParamList

   13 nonEmptyParamList: typeName ID
   14                  | nonEmptyParamList COMMA typeName ID

   15 exp: INTEGER_LITERAL
   16    | exp PLUS exp
   17    | exp MINUS exp
   18    | exp STAR exp
   19    | exp MOD exp
   20    | exp AND exp
   21    | exp OR exp
   22    | exp LESS exp
   23    | TRUE
   24    | FALSE
   25    | THIS
   26    | exp POINT LENGTH
   27    | ID
   28    | NOT exp
   29    | NEW INT LSBRACKET exp RSBRACKET
   30    | exp LSBRACKET exp RSBRACKET
   31    | LPBRACKET exp RPBRACKET
   32    | NEW ID LPBRACKET RPBRACKET
   33    | exp POINT ID LPBRACKET expList RPBRACKET

   34 expList: %empty
   35        | nonEmptyExpList

   36 nonEmptyExpList: exp
   37                | nonEmptyExpList COMMA exp

   38 statList: %empty
   39         | stat statList

   40 typeName: INT LSBRACKET RSBRACKET
   41         | BOOLEAN
   42         | INT
   43         | ID

   44 visibility: PUBLIC
   45           | PRIVATE

   46 methodDeclaration: visibility typeName ID LPBRACKET paramList RPBRACKET LFBRACKET varDeclList statList RETURN exp SEMICOLON RFBRACKET

   47 stat: LFBRACKET statList RFBRACKET
   48     | IF LPBRACKET exp RPBRACKET stat ELSE stat
   49     | WHILE LPBRACKET exp RPBRACKET stat
   50     | PRINTLN LPBRACKET exp RPBRACKET SEMICOLON
   51     | ID ASSIGN exp SEMICOLON
   52     | ID LSBRACKET exp RSBRACKET ASSIGN exp SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
LPBRACKET (258) 2 31 32 33 46 48 49 50
RPBRACKET (259) 2 31 32 33 46 48 49 50
LFBRACKET (260) 2 5 6 46 47
RFBRACKET (261) 2 5 6 46 47
LSBRACKET (262) 2 29 30 40 52
RSBRACKET (263) 2 29 30 40 52
SEMICOLON (264) 10 46 50 51 52
PUBLIC (265) 2 44
PRIVATE (266) 45
STATIC (267) 2
INT (268) 29 40 42
BOOLEAN (269) 41
VOID (270) 2
STRING (271) 2
TRUE (272) 23
FALSE (273) 24
CLASS (274) 2 5 6
EXTENDS (275) 6
IF (276) 48
ELSE (277) 48
WHILE (278) 49
RETURN (279) 46
PRINTLN (280) 50
LENGTH (281) 26
THIS (282) 25
NEW (283) 29 32
MAIN (284) 2
POINT (285) 26 33
COMMA (286) 14 37
ASSIGN (287) 51 52
LESS (288) 22
OR (289) 21
AND (290) 20
NOT (291) 28
PLUS (292) 16
MINUS (293) 17
STAR (294) 18
INTEGER_LITERAL (295) 15
ID (296) 2 5 6 10 13 14 27 32 33 43 46 51 52
MOD (297) 19


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
input (44)
    on left: 1, on right: 0
mainClass (45)
    on left: 2, on right: 1
classDeclList (46)
    on left: 3 4, on right: 1 4
classDeclaration (47)
    on left: 5 6, on right: 4
methodDeclList (48)
    on left: 7 8, on right: 5 6 8
varDeclList (49)
    on left: 9 10, on right: 5 6 10 46
paramList (50)
    on left: 11 12, on right: 46
nonEmptyParamList (51)
    on left: 13 14, on right: 12 14
exp (52)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
    33, on right: 16 17 18 19 20 21 22 26 28 29 30 31 33 36 37 46 48
    49 50 51 52
expList (53)
    on left: 34 35, on right: 33
nonEmptyExpList (54)
    on left: 36 37, on right: 35 37
statList (55)
    on left: 38 39, on right: 2 39 46 47
typeName (56)
    on left: 40 41 42 43, on right: 10 13 14 46
visibility (57)
    on left: 44 45, on right: 46
methodDeclaration (58)
    on left: 46, on right: 8
stat (59)
    on left: 47 48 49 50 51 52, on right: 39 48 49


State 0

    0 $accept: . input $end

    CLASS  shift, and go to state 1

    input      go to state 2
    mainClass  go to state 3


State 1

    2 mainClass: CLASS . ID LFBRACKET PUBLIC STATIC VOID MAIN LPBRACKET STRING LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET

    ID  shift, and go to state 4


State 2

    0 $accept: input . $end

    $end  shift, and go to state 5


State 3

    1 input: mainClass . classDeclList

    CLASS  shift, and go to state 6

    $default  reduce using rule 3 (classDeclList)

    classDeclList     go to state 7
    classDeclaration  go to state 8


State 4

    2 mainClass: CLASS ID . LFBRACKET PUBLIC STATIC VOID MAIN LPBRACKET STRING LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET

    LFBRACKET  shift, and go to state 9


State 5

    0 $accept: input $end .

    $default  accept


State 6

    5 classDeclaration: CLASS . ID LFBRACKET varDeclList methodDeclList RFBRACKET
    6                 | CLASS . ID EXTENDS ID LFBRACKET varDeclList methodDeclList RFBRACKET

    ID  shift, and go to state 10


State 7

    1 input: mainClass classDeclList .

    $default  reduce using rule 1 (input)


State 8

    4 classDeclList: classDeclaration . classDeclList

    CLASS  shift, and go to state 6

    $default  reduce using rule 3 (classDeclList)

    classDeclList     go to state 11
    classDeclaration  go to state 8


State 9

    2 mainClass: CLASS ID LFBRACKET . PUBLIC STATIC VOID MAIN LPBRACKET STRING LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET

    PUBLIC  shift, and go to state 12


State 10

    5 classDeclaration: CLASS ID . LFBRACKET varDeclList methodDeclList RFBRACKET
    6                 | CLASS ID . EXTENDS ID LFBRACKET varDeclList methodDeclList RFBRACKET

    LFBRACKET  shift, and go to state 13
    EXTENDS    shift, and go to state 14


State 11

    4 classDeclList: classDeclaration classDeclList .

    $default  reduce using rule 4 (classDeclList)


State 12

    2 mainClass: CLASS ID LFBRACKET PUBLIC . STATIC VOID MAIN LPBRACKET STRING LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET

    STATIC  shift, and go to state 15


State 13

    5 classDeclaration: CLASS ID LFBRACKET . varDeclList methodDeclList RFBRACKET

    $default  reduce using rule 9 (varDeclList)

    varDeclList  go to state 16


State 14

    6 classDeclaration: CLASS ID EXTENDS . ID LFBRACKET varDeclList methodDeclList RFBRACKET

    ID  shift, and go to state 17


State 15

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC . VOID MAIN LPBRACKET STRING LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET

    VOID  shift, and go to state 18


State 16

    5 classDeclaration: CLASS ID LFBRACKET varDeclList . methodDeclList RFBRACKET
   10 varDeclList: varDeclList . typeName ID SEMICOLON

    PUBLIC   shift, and go to state 19
    PRIVATE  shift, and go to state 20
    INT      shift, and go to state 21
    BOOLEAN  shift, and go to state 22
    ID       shift, and go to state 23

    $default  reduce using rule 7 (methodDeclList)

    methodDeclList     go to state 24
    typeName           go to state 25
    visibility         go to state 26
    methodDeclaration  go to state 27


State 17

    6 classDeclaration: CLASS ID EXTENDS ID . LFBRACKET varDeclList methodDeclList RFBRACKET

    LFBRACKET  shift, and go to state 28


State 18

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC VOID . MAIN LPBRACKET STRING LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET

    MAIN  shift, and go to state 29


State 19

   44 visibility: PUBLIC .

    $default  reduce using rule 44 (visibility)


State 20

   45 visibility: PRIVATE .

    $default  reduce using rule 45 (visibility)


State 21

   40 typeName: INT . LSBRACKET RSBRACKET
   42         | INT .

    LSBRACKET  shift, and go to state 30

    $default  reduce using rule 42 (typeName)


State 22

   41 typeName: BOOLEAN .

    $default  reduce using rule 41 (typeName)


State 23

   43 typeName: ID .

    $default  reduce using rule 43 (typeName)


State 24

    5 classDeclaration: CLASS ID LFBRACKET varDeclList methodDeclList . RFBRACKET

    RFBRACKET  shift, and go to state 31


State 25

   10 varDeclList: varDeclList typeName . ID SEMICOLON

    ID  shift, and go to state 32


State 26

   46 methodDeclaration: visibility . typeName ID LPBRACKET paramList RPBRACKET LFBRACKET varDeclList statList RETURN exp SEMICOLON RFBRACKET

    INT      shift, and go to state 21
    BOOLEAN  shift, and go to state 22
    ID       shift, and go to state 23

    typeName  go to state 33


State 27

    8 methodDeclList: methodDeclaration . methodDeclList

    PUBLIC   shift, and go to state 19
    PRIVATE  shift, and go to state 20

    $default  reduce using rule 7 (methodDeclList)

    methodDeclList     go to state 34
    visibility         go to state 26
    methodDeclaration  go to state 27


State 28

    6 classDeclaration: CLASS ID EXTENDS ID LFBRACKET . varDeclList methodDeclList RFBRACKET

    $default  reduce using rule 9 (varDeclList)

    varDeclList  go to state 35


State 29

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC VOID MAIN . LPBRACKET STRING LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET

    LPBRACKET  shift, and go to state 36


State 30

   40 typeName: INT LSBRACKET . RSBRACKET

    RSBRACKET  shift, and go to state 37


State 31

    5 classDeclaration: CLASS ID LFBRACKET varDeclList methodDeclList RFBRACKET .

    $default  reduce using rule 5 (classDeclaration)


State 32

   10 varDeclList: varDeclList typeName ID . SEMICOLON

    SEMICOLON  shift, and go to state 38


State 33

   46 methodDeclaration: visibility typeName . ID LPBRACKET paramList RPBRACKET LFBRACKET varDeclList statList RETURN exp SEMICOLON RFBRACKET

    ID  shift, and go to state 39


State 34

    8 methodDeclList: methodDeclaration methodDeclList .

    $default  reduce using rule 8 (methodDeclList)


State 35

    6 classDeclaration: CLASS ID EXTENDS ID LFBRACKET varDeclList . methodDeclList RFBRACKET
   10 varDeclList: varDeclList . typeName ID SEMICOLON

    PUBLIC   shift, and go to state 19
    PRIVATE  shift, and go to state 20
    INT      shift, and go to state 21
    BOOLEAN  shift, and go to state 22
    ID       shift, and go to state 23

    $default  reduce using rule 7 (methodDeclList)

    methodDeclList     go to state 40
    typeName           go to state 25
    visibility         go to state 26
    methodDeclaration  go to state 27


State 36

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC VOID MAIN LPBRACKET . STRING LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET

    STRING  shift, and go to state 41


State 37

   40 typeName: INT LSBRACKET RSBRACKET .

    $default  reduce using rule 40 (typeName)


State 38

   10 varDeclList: varDeclList typeName ID SEMICOLON .

    $default  reduce using rule 10 (varDeclList)


State 39

   46 methodDeclaration: visibility typeName ID . LPBRACKET paramList RPBRACKET LFBRACKET varDeclList statList RETURN exp SEMICOLON RFBRACKET

    LPBRACKET  shift, and go to state 42


State 40

    6 classDeclaration: CLASS ID EXTENDS ID LFBRACKET varDeclList methodDeclList . RFBRACKET

    RFBRACKET  shift, and go to state 43


State 41

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC VOID MAIN LPBRACKET STRING . LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET

    LSBRACKET  shift, and go to state 44


State 42

   46 methodDeclaration: visibility typeName ID LPBRACKET . paramList RPBRACKET LFBRACKET varDeclList statList RETURN exp SEMICOLON RFBRACKET

    INT      shift, and go to state 21
    BOOLEAN  shift, and go to state 22
    ID       shift, and go to state 23

    $default  reduce using rule 11 (paramList)

    paramList          go to state 45
    nonEmptyParamList  go to state 46
    typeName           go to state 47


State 43

    6 classDeclaration: CLASS ID EXTENDS ID LFBRACKET varDeclList methodDeclList RFBRACKET .

    $default  reduce using rule 6 (classDeclaration)


State 44

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC VOID MAIN LPBRACKET STRING LSBRACKET . RSBRACKET ID RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET

    RSBRACKET  shift, and go to state 48


State 45

   46 methodDeclaration: visibility typeName ID LPBRACKET paramList . RPBRACKET LFBRACKET varDeclList statList RETURN exp SEMICOLON RFBRACKET

    RPBRACKET  shift, and go to state 49


State 46

   12 paramList: nonEmptyParamList .
   14 nonEmptyParamList: nonEmptyParamList . COMMA typeName ID

    COMMA  shift, and go to state 50

    $default  reduce using rule 12 (paramList)


State 47

   13 nonEmptyParamList: typeName . ID

    ID  shift, and go to state 51


State 48

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC VOID MAIN LPBRACKET STRING LSBRACKET RSBRACKET . ID RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET

    ID  shift, and go to state 52


State 49

   46 methodDeclaration: visibility typeName ID LPBRACKET paramList RPBRACKET . LFBRACKET varDeclList statList RETURN exp SEMICOLON RFBRACKET

    LFBRACKET  shift, and go to state 53


State 50

   14 nonEmptyParamList: nonEmptyParamList COMMA . typeName ID

    INT      shift, and go to state 21
    BOOLEAN  shift, and go to state 22
    ID       shift, and go to state 23

    typeName  go to state 54


State 51

   13 nonEmptyParamList: typeName ID .

    $default  reduce using rule 13 (nonEmptyParamList)


State 52

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC VOID MAIN LPBRACKET STRING LSBRACKET RSBRACKET ID . RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET

    RPBRACKET  shift, and go to state 55


State 53

   46 methodDeclaration: visibility typeName ID LPBRACKET paramList RPBRACKET LFBRACKET . varDeclList statList RETURN exp SEMICOLON RFBRACKET

    $default  reduce using rule 9 (varDeclList)

    varDeclList  go to state 56


State 54

   14 nonEmptyParamList: nonEmptyParamList COMMA typeName . ID

    ID  shift, and go to state 57


State 55

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC VOID MAIN LPBRACKET STRING LSBRACKET RSBRACKET ID RPBRACKET . LFBRACKET statList RFBRACKET RFBRACKET

    LFBRACKET  shift, and go to state 58


State 56

   10 varDeclList: varDeclList . typeName ID SEMICOLON
   46 methodDeclaration: visibility typeName ID LPBRACKET paramList RPBRACKET LFBRACKET varDeclList . statList RETURN exp SEMICOLON RFBRACKET

    LFBRACKET  shift, and go to state 59
    INT        shift, and go to state 21
    BOOLEAN    shift, and go to state 22
    IF         shift, and go to state 60
    WHILE      shift, and go to state 61
    PRINTLN    shift, and go to state 62
    ID         shift, and go to state 63

    $default  reduce using rule 38 (statList)

    statList  go to state 64
    typeName  go to state 25
    stat      go to state 65


State 57

   14 nonEmptyParamList: nonEmptyParamList COMMA typeName ID .

    $default  reduce using rule 14 (nonEmptyParamList)


State 58

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC VOID MAIN LPBRACKET STRING LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET . statList RFBRACKET RFBRACKET

    LFBRACKET  shift, and go to state 59
    IF         shift, and go to state 60
    WHILE      shift, and go to state 61
    PRINTLN    shift, and go to state 62
    ID         shift, and go to state 66

    $default  reduce using rule 38 (statList)

    statList  go to state 67
    stat      go to state 65


State 59

   47 stat: LFBRACKET . statList RFBRACKET

    LFBRACKET  shift, and go to state 59
    IF         shift, and go to state 60
    WHILE      shift, and go to state 61
    PRINTLN    shift, and go to state 62
    ID         shift, and go to state 66

    $default  reduce using rule 38 (statList)

    statList  go to state 68
    stat      go to state 65


State 60

   48 stat: IF . LPBRACKET exp RPBRACKET stat ELSE stat

    LPBRACKET  shift, and go to state 69


State 61

   49 stat: WHILE . LPBRACKET exp RPBRACKET stat

    LPBRACKET  shift, and go to state 70


State 62

   50 stat: PRINTLN . LPBRACKET exp RPBRACKET SEMICOLON

    LPBRACKET  shift, and go to state 71


State 63

   43 typeName: ID .
   51 stat: ID . ASSIGN exp SEMICOLON
   52     | ID . LSBRACKET exp RSBRACKET ASSIGN exp SEMICOLON

    LSBRACKET  shift, and go to state 72
    ASSIGN     shift, and go to state 73

    $default  reduce using rule 43 (typeName)


State 64

   46 methodDeclaration: visibility typeName ID LPBRACKET paramList RPBRACKET LFBRACKET varDeclList statList . RETURN exp SEMICOLON RFBRACKET

    RETURN  shift, and go to state 74


State 65

   39 statList: stat . statList

    LFBRACKET  shift, and go to state 59
    IF         shift, and go to state 60
    WHILE      shift, and go to state 61
    PRINTLN    shift, and go to state 62
    ID         shift, and go to state 66

    $default  reduce using rule 38 (statList)

    statList  go to state 75
    stat      go to state 65


State 66

   51 stat: ID . ASSIGN exp SEMICOLON
   52     | ID . LSBRACKET exp RSBRACKET ASSIGN exp SEMICOLON

    LSBRACKET  shift, and go to state 72
    ASSIGN     shift, and go to state 73


State 67

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC VOID MAIN LPBRACKET STRING LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET statList . RFBRACKET RFBRACKET

    RFBRACKET  shift, and go to state 76


State 68

   47 stat: LFBRACKET statList . RFBRACKET

    RFBRACKET  shift, and go to state 77


State 69

   48 stat: IF LPBRACKET . exp RPBRACKET stat ELSE stat

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 86


State 70

   49 stat: WHILE LPBRACKET . exp RPBRACKET stat

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 87


State 71

   50 stat: PRINTLN LPBRACKET . exp RPBRACKET SEMICOLON

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 88


State 72

   52 stat: ID LSBRACKET . exp RSBRACKET ASSIGN exp SEMICOLON

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 89


State 73

   51 stat: ID ASSIGN . exp SEMICOLON

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 90


State 74

   46 methodDeclaration: visibility typeName ID LPBRACKET paramList RPBRACKET LFBRACKET varDeclList statList RETURN . exp SEMICOLON RFBRACKET

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 91


State 75

   39 statList: stat statList .

    $default  reduce using rule 39 (statList)


State 76

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC VOID MAIN LPBRACKET STRING LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET statList RFBRACKET . RFBRACKET

    RFBRACKET  shift, and go to state 92


State 77

   47 stat: LFBRACKET statList RFBRACKET .

    $default  reduce using rule 47 (stat)


State 78

   31 exp: LPBRACKET . exp RPBRACKET

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 93


State 79

   23 exp: TRUE .

    $default  reduce using rule 23 (exp)


State 80

   24 exp: FALSE .

    $default  reduce using rule 24 (exp)


State 81

   25 exp: THIS .

    $default  reduce using rule 25 (exp)


State 82

   29 exp: NEW . INT LSBRACKET exp RSBRACKET
   32    | NEW . ID LPBRACKET RPBRACKET

    INT  shift, and go to state 94
    ID   shift, and go to state 95


State 83

   28 exp: NOT . exp

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 96


State 84

   15 exp: INTEGER_LITERAL .

    $default  reduce using rule 15 (exp)


State 85

   27 exp: ID .

    $default  reduce using rule 27 (exp)


State 86

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . STAR exp
   19    | exp . MOD exp
   20    | exp . AND exp
   21    | exp . OR exp
   22    | exp . LESS exp
   26    | exp . POINT LENGTH
   30    | exp . LSBRACKET exp RSBRACKET
   33    | exp . POINT ID LPBRACKET expList RPBRACKET
   48 stat: IF LPBRACKET exp . RPBRACKET stat ELSE stat

    RPBRACKET  shift, and go to state 97
    LSBRACKET  shift, and go to state 98
    POINT      shift, and go to state 99
    LESS       shift, and go to state 100
    OR         shift, and go to state 101
    AND        shift, and go to state 102
    PLUS       shift, and go to state 103
    MINUS      shift, and go to state 104
    STAR       shift, and go to state 105
    MOD        shift, and go to state 106


State 87

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . STAR exp
   19    | exp . MOD exp
   20    | exp . AND exp
   21    | exp . OR exp
   22    | exp . LESS exp
   26    | exp . POINT LENGTH
   30    | exp . LSBRACKET exp RSBRACKET
   33    | exp . POINT ID LPBRACKET expList RPBRACKET
   49 stat: WHILE LPBRACKET exp . RPBRACKET stat

    RPBRACKET  shift, and go to state 107
    LSBRACKET  shift, and go to state 98
    POINT      shift, and go to state 99
    LESS       shift, and go to state 100
    OR         shift, and go to state 101
    AND        shift, and go to state 102
    PLUS       shift, and go to state 103
    MINUS      shift, and go to state 104
    STAR       shift, and go to state 105
    MOD        shift, and go to state 106


State 88

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . STAR exp
   19    | exp . MOD exp
   20    | exp . AND exp
   21    | exp . OR exp
   22    | exp . LESS exp
   26    | exp . POINT LENGTH
   30    | exp . LSBRACKET exp RSBRACKET
   33    | exp . POINT ID LPBRACKET expList RPBRACKET
   50 stat: PRINTLN LPBRACKET exp . RPBRACKET SEMICOLON

    RPBRACKET  shift, and go to state 108
    LSBRACKET  shift, and go to state 98
    POINT      shift, and go to state 99
    LESS       shift, and go to state 100
    OR         shift, and go to state 101
    AND        shift, and go to state 102
    PLUS       shift, and go to state 103
    MINUS      shift, and go to state 104
    STAR       shift, and go to state 105
    MOD        shift, and go to state 106


State 89

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . STAR exp
   19    | exp . MOD exp
   20    | exp . AND exp
   21    | exp . OR exp
   22    | exp . LESS exp
   26    | exp . POINT LENGTH
   30    | exp . LSBRACKET exp RSBRACKET
   33    | exp . POINT ID LPBRACKET expList RPBRACKET
   52 stat: ID LSBRACKET exp . RSBRACKET ASSIGN exp SEMICOLON

    LSBRACKET  shift, and go to state 98
    RSBRACKET  shift, and go to state 109
    POINT      shift, and go to state 99
    LESS       shift, and go to state 100
    OR         shift, and go to state 101
    AND        shift, and go to state 102
    PLUS       shift, and go to state 103
    MINUS      shift, and go to state 104
    STAR       shift, and go to state 105
    MOD        shift, and go to state 106


State 90

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . STAR exp
   19    | exp . MOD exp
   20    | exp . AND exp
   21    | exp . OR exp
   22    | exp . LESS exp
   26    | exp . POINT LENGTH
   30    | exp . LSBRACKET exp RSBRACKET
   33    | exp . POINT ID LPBRACKET expList RPBRACKET
   51 stat: ID ASSIGN exp . SEMICOLON

    LSBRACKET  shift, and go to state 98
    SEMICOLON  shift, and go to state 110
    POINT      shift, and go to state 99
    LESS       shift, and go to state 100
    OR         shift, and go to state 101
    AND        shift, and go to state 102
    PLUS       shift, and go to state 103
    MINUS      shift, and go to state 104
    STAR       shift, and go to state 105
    MOD        shift, and go to state 106


State 91

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . STAR exp
   19    | exp . MOD exp
   20    | exp . AND exp
   21    | exp . OR exp
   22    | exp . LESS exp
   26    | exp . POINT LENGTH
   30    | exp . LSBRACKET exp RSBRACKET
   33    | exp . POINT ID LPBRACKET expList RPBRACKET
   46 methodDeclaration: visibility typeName ID LPBRACKET paramList RPBRACKET LFBRACKET varDeclList statList RETURN exp . SEMICOLON RFBRACKET

    LSBRACKET  shift, and go to state 98
    SEMICOLON  shift, and go to state 111
    POINT      shift, and go to state 99
    LESS       shift, and go to state 100
    OR         shift, and go to state 101
    AND        shift, and go to state 102
    PLUS       shift, and go to state 103
    MINUS      shift, and go to state 104
    STAR       shift, and go to state 105
    MOD        shift, and go to state 106


State 92

    2 mainClass: CLASS ID LFBRACKET PUBLIC STATIC VOID MAIN LPBRACKET STRING LSBRACKET RSBRACKET ID RPBRACKET LFBRACKET statList RFBRACKET RFBRACKET .

    $default  reduce using rule 2 (mainClass)


State 93

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . STAR exp
   19    | exp . MOD exp
   20    | exp . AND exp
   21    | exp . OR exp
   22    | exp . LESS exp
   26    | exp . POINT LENGTH
   30    | exp . LSBRACKET exp RSBRACKET
   31    | LPBRACKET exp . RPBRACKET
   33    | exp . POINT ID LPBRACKET expList RPBRACKET

    RPBRACKET  shift, and go to state 112
    LSBRACKET  shift, and go to state 98
    POINT      shift, and go to state 99
    LESS       shift, and go to state 100
    OR         shift, and go to state 101
    AND        shift, and go to state 102
    PLUS       shift, and go to state 103
    MINUS      shift, and go to state 104
    STAR       shift, and go to state 105
    MOD        shift, and go to state 106


State 94

   29 exp: NEW INT . LSBRACKET exp RSBRACKET

    LSBRACKET  shift, and go to state 113


State 95

   32 exp: NEW ID . LPBRACKET RPBRACKET

    LPBRACKET  shift, and go to state 114


State 96

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . STAR exp
   19    | exp . MOD exp
   20    | exp . AND exp
   21    | exp . OR exp
   22    | exp . LESS exp
   26    | exp . POINT LENGTH
   28    | NOT exp .
   30    | exp . LSBRACKET exp RSBRACKET
   33    | exp . POINT ID LPBRACKET expList RPBRACKET

    LSBRACKET  shift, and go to state 98
    POINT      shift, and go to state 99

    $default  reduce using rule 28 (exp)


State 97

   48 stat: IF LPBRACKET exp RPBRACKET . stat ELSE stat

    LFBRACKET  shift, and go to state 59
    IF         shift, and go to state 60
    WHILE      shift, and go to state 61
    PRINTLN    shift, and go to state 62
    ID         shift, and go to state 66

    stat  go to state 115


State 98

   30 exp: exp LSBRACKET . exp RSBRACKET

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 116


State 99

   26 exp: exp POINT . LENGTH
   33    | exp POINT . ID LPBRACKET expList RPBRACKET

    LENGTH  shift, and go to state 117
    ID      shift, and go to state 118


State 100

   22 exp: exp LESS . exp

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 119


State 101

   21 exp: exp OR . exp

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 120


State 102

   20 exp: exp AND . exp

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 121


State 103

   16 exp: exp PLUS . exp

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 122


State 104

   17 exp: exp MINUS . exp

    LPBRACKET        shift, and go to state 78
    TRUE             shift, and go to state 79
    FALSE            shift, and go to state 80
    THIS             shift, and go to state 81
    NEW              shift, and go to state 82
    NOT              shift, and go to state 83
    INTEGER_LITERAL  shift, and go to state 84
    ID               shift, and go to state 85

    exp  go to state 123


State 105

   18 exp: exp STAR . exp
